# cmake-make-bazel-training-basic

./: .gitignore  BUILD  CMakeLists.txt  LICENSE  Makefile  README.md  main.c  readme.md
cmake/toolchain/: clang_toolchain.cmake  gcc_toolchain.cmake
distance/: CMakeLists.txt
distance/inc/: distance.h
distance/src/: CMakeLists.txt  distance_earth.c  distance_jupiter.c
planet/: CMakeLists.txt
planet/inc/: hello.h
planet/src/: CMakeLists.txt  hello_earth.c  hello_jupiter.c
src/: CMakeLists.txt  hello.c  hello.h
src/earth/: CMakeLists.txt  hello_earth.c  hello_earth.h
src/jupiter/: CMakeLists.txt  hello_jupiter.c  hello_jupiter.h
